docs: add swagger section for Auth
