# internal/models/auth.go
@@ -4,3 +4,7 @@ type AuthInput struct {
 	Login    string `json:"login" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
+
+type AuthResponse struct {
+	Data string `json:"token"`
+}
